--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>GoalopediaTest</title>
+  <title>Goalopedia</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 <meta name="viewport" content="width=device-width, initial-scale=1"/></head>
 <body>
 <%= render partial: "elements/navbar" %>
+<div class="container">
 <%= bootstrap_flash %>
 
 
 <%= yield %>
+<%= render 'elements/footer' %>
+</div>
+
 
 </body>
 </html>
