--- a/app/views/statics/index.html.erb
+++ b/app/views/statics/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Statics#index</h1>
-<p>Find me in app/views/statics/index.html.erb</p>
+<div class="center hero-unit">
+  <h1>Welcome to Goalopedia</h1>
+
+  <h2>
+    Get yo goalzzzzzzzzzzz
+  </h2>
+
+  <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+</div>
