--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -109,7 +109,7 @@ font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 font-size: 14px;
 line-height: 1.428571429;
 color: #333332;
-background-color: white;
+background-color: #DBFBFF;
 }
 
 
@@ -120,7 +120,16 @@ background-color: white;
 .gfySize {
   margin-left: auto;
   margin-right: auto;
-  max-width: 420px;
+  max-width: 440px;
+}
+
+.box a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.box a:hover {
+  text-decoration: underline;
 }
 
 
@@ -130,23 +139,13 @@ background-color: white;
 
 /**** Base styles ****/
 
-nav#page-nav {
-  display: block;
-}
+
 
 body {
   overflow-y: scroll;
 }
 
-#container {
-  padding: 5px;
-  margin-bottom: 20px;
-  border-radius: 5px;
-  clear: both;
-  -webkit-border-radius: 5px;
-     -moz-border-radius: 5px;
-          border-radius: 5px;
-}
+
 
 .box {
   float: left;
@@ -167,17 +166,12 @@ body {
     margin-top: 0px
 }
 
-.col1 { width: 80px; }
-.col2 { width: 180px; }
-.col3 { width: 280px; }
-.col4 { width: 380px; }
-.col5 { width: 430px; }
-
-
 /**** Clearfix ****/
 .clearfix:before, .clearfix:after { content: ""; display: table; }
 .clearfix:after { clear: both; }
 .clearfix { zoom: 1; }
+
+
 
 
 /*pagination*/
@@ -189,8 +183,22 @@ body {
 
 
 
+/*Goal Show*/
+
+.gfyShow {
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  
+
+}
+
+.gfyShow {
+  border: #DEDEDE 10px groove;
+  border-bottom-color: transparent;
 
 
+}
 
 
 
