--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -1,11 +1,22 @@
 <%- model_class = Goal -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => Goal %></h1>
+  <h1><%= @goal.player %> (<%= @goal.team %>) v. <%= @goal.opponent %></h1>
 </div>
 
+
+<% if @goal.gfy = true %>
 <div class="gfyShow">
 	<div class="gfyitem" data-title=false data-autoplay=false data-controls=false data-expand=false data-id="<%= @gfyid %>" %>"></div> 
 </div>
+
+<% else %>
+
+<h3>Please add my video!</h3>
+
+<% end %>
+
+
+
 
 
 
@@ -43,10 +54,8 @@
 </div>
 
 <div class="form-group">
-  <%= link_to t('.back', :default => t("helpers.links.back")),
-              goals_path, :class => 'btn btn-default'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_goal_path(@goal), :class => 'btn btn-default' %>
+              edit_goal_path(@goal), :class => 'btn btn-info' %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
               goal_path(@goal),
               :method => 'delete',
