--- a/app/views/elements/_navbar.html.erb
+++ b/app/views/elements/_navbar.html.erb
@@ -7,29 +7,18 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <%= link_to "Goalopedia", defined?(root_path) ? root_path : "#", class: "navbar-brand" %>
+    <%= link_to(image_tag("logoNBG.png", :class => "navbar-brand", :alt => "Goalopedia"), root_path) %>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
-  <div class="collapse navbar-collapse" id="navbar-collapse-1">
-    <ul class="nav navbar-nav">
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-      <% if defined?(Devise) %>
-        <% if user_signed_in? %>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "Edit Account", edit_user_registration_path %></li>
-              <li class="divider"></li>
-              <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
-            </ul>
-          </li>
-        <% else %>
-          <li><%= link_to "Login", new_user_session_path %></li>
-          <li><%= link_to "Sign Up", new_user_registration_path %></li>
-        <% end %>
-      <% end %>
-    </ul>
-  </div><!-- /.navbar-collapse -->
+<%= form_tag goals_path, method: :get, class: "navbar-form navbar-right" do %>
+  <p>
+    <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Search Players and Teams" %>
+    <%= submit_tag "Search", name: nil, class: "btn btn-default" %>
+  </p>
+<% end %>
+
+
+
+  
 </nav>
