--- a/app/views/goals/_form.html.erb
+++ b/app/views/goals/_form.html.erb
@@ -26,7 +26,7 @@
   <div class="form-group">
     <%= f.label :date, :class => 'control-label col-md-2' %>
     <div class="col-md-10">
-      <%= f.date_select :date, :class => 'text-field form-control' %>
+      <%= f.date_select :date, { :include_blank => true, :start_year => 1900 }, :class => 'text-field form-control' %>
     </div>
   </div>
   <div class="form-group">
