--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -1,8 +1,11 @@
 <%- model_class = Goal -%>
-<div class="page-header">
+
+
+<div class="jumbotron">
   <h1><%= @goal.player %> (<%= @goal.team %>) v. <%= @goal.opponent %></h1>
 </div>
 
+<div class="showContent">
 
 <% if @goal.gfy = true %>
 <div class="gfyShow">
@@ -15,44 +18,6 @@
 
 <% end %>
 
-
-
-
-
-
-<div class="fieldset">
-  <dl>
-      <dt class="label label-default"><%= model_class.human_attribute_name(:player) %></dt>
-      <dd><pre class="prettyprint"><%= @goal.player %></pre></dd>
-      <dt class="label label-default"><%= model_class.human_attribute_name(:minute) %></dt>
-      <dd><pre class="prettyprint"><%= @goal.minute %></pre></dd>
-      <dt class="label label-default"><%= model_class.human_attribute_name(:team) %></dt>
-      <dd><pre class="prettyprint"><%= @goal.team %></pre></dd>
-      <dt class="label label-default"><%= model_class.human_attribute_name(:opponent) %></dt>
-      <dd><pre class="prettyprint"><%= @goal.opponent %></pre></dd>
-      <dt class="label label-default"><%= model_class.human_attribute_name(:date) %></dt>
-      <dd><pre class="prettyprint"><%= @goal.date %></pre></dd>
-      <dt class="label label-default"><%= model_class.human_attribute_name(:penalty) %></dt>
-      <dd><pre class="prettyprint"><%= @goal.penalty %></pre></dd>
-      <dt class="label label-default"><%= model_class.human_attribute_name(:own_goal) %></dt>
-      <dd><pre class="prettyprint"><%= @goal.own_goal %></pre></dd>
-      <dt class="label label-default"><%= model_class.human_attribute_name(:stadium) %></dt>
-      <dd><pre class="prettyprint"><%= @goal.stadium %></pre></dd>
-      <dt class="label label-default"><%= model_class.human_attribute_name(:home) %></dt>
-      <dd><pre class="prettyprint"><%= @goal.home %></pre></dd>
-      <dt class="label label-default"><%= model_class.human_attribute_name(:competition) %></dt>
-      <dd><pre class="prettyprint"><%= @goal.competition %></pre></dd>
-      <dt class="label label-default"><%= model_class.human_attribute_name(:stage) %></dt>
-      <dd><pre class="prettyprint"><%= @goal.stage %></pre></dd>
-      <dt class="label label-default"><%= model_class.human_attribute_name(:assist) %></dt>
-      <dd><pre class="prettyprint"><%= @goal.assist %></pre></dd>
-      <dt class="label label-default"><%= model_class.human_attribute_name(:video) %></dt>
-      <dd><pre class="prettyprint"><%= @goal.video %></pre></dd>
-      <dt class="label label-default"><%= model_class.human_attribute_name(:gfy) %></dt>
-      <dd><pre class="prettyprint"><%= @goal.gfy %></pre></dd>
-  </dl>
-</div>
-
 <div class="form-group">
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
               edit_goal_path(@goal), :class => 'btn btn-info' %>
@@ -62,4 +27,8 @@
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
 </div>
+
+</div>
+
+
 
