--- a/app/views/statics/upload.html.erb
+++ b/app/views/statics/upload.html.erb
@@ -1,18 +1,21 @@
-<h2>Upload/Download Goals Goals</h2>
-<h3>Admin Only</h3>
+<div class="uploadPage">
 
-<h4>Upload</h4>
+	<h2>Upload/Download Goals Goals</h2>
+	<h3>Admin Only</h3>
 
-
-<%= form_tag import_goals_path, multipart: true do %>
-  <%= file_field_tag :file %>
-  <%= submit_tag "Import" %>
-<% end %>
-
-<h4>Download</h4>
+	<h4>Upload</h4>
 
 
-<p>
-  Download:
-  <%= link_to "CSV", goals_path(format: "csv") %>
-</p>
+	<%= form_tag import_goals_path, multipart: true do %>
+	  <%= file_field_tag :file %>
+	  <%= submit_tag "Import" %>
+	<% end %>
+
+	<h4>Download</h4>
+
+
+	<p>
+	  Download:
+	  <%= link_to "CSV", goals_path(format: "csv") %>
+	</p>
+</div>
