--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -253,6 +253,9 @@ body {
 }
 
 .gfyShow {
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
 
 }
 
@@ -262,6 +265,12 @@ body {
   max-width: 900px;
 }
 
+.vidOut {
+  margin-left: auto;
+  margin-right: auto;
+
+
+}
 
 
 
