--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -9,7 +9,9 @@
 
 <% if @goal.gfy = true %>
 <div class="gfyShow">
-	<div class="gfyitem" data-title=false data-autoplay=false data-controls=false data-expand=false data-id="<%= @gfyid %>" %>"></div> 
+  <div class="vidOut">
+  	<div class="gfyitem" data-title=false data-autoplay=false data-controls=false data-expand=false data-id="<%= @gfyid %>" %>"></div> 
+  </div>
 </div>
 
 <% else %>
