--- a/app/views/goals/_goal.html.erb
+++ b/app/views/goals/_goal.html.erb
@@ -1,5 +1,6 @@
 <div class="box">
 	<% gfyid = goal.gfy.to_s.gsub("http://gfycat.com/", "") %>
+	
 	<h2>
 		<%= link_to goal do %>
 			<%= goal.player %> (<%= goal.team %>) v. <%= goal.opponent %>
@@ -7,6 +8,15 @@
 	</h2>
 	<div class="gfySize">
 				<div class="gfyitem" data-title=false data-autoplay=false data-controls=false data-expand=false data-id="<%= gfyid %>"></div>
-
 	</div>
+	
+
+
+	<% if goal.competition = "World Cup" %>
+	<h2><%= goal.competition %> <%= goal.date.year %> - <%= goal.stage %></h2> 
+
+	<% else %>
+	<h2><%= goal.competition %> <%= goal.date.year %></h2> 
+	<% end %>
+
 </div>
