remove date cuz fuck

--- a/app/views/goals/_goal.html.erb
+++ b/app/views/goals/_goal.html.erb
@@ -13,10 +13,10 @@
 
 
 	<% if goal.competition = "World Cup" %>
-	<h2><%= goal.competition %> <%= goal.date.year %> - <%= goal.stage %></h2> 
+	<h2><%= goal.competition %> - <%= goal.stage %></h2> 
 
 	<% else %>
-	<h2><%= goal.competition %> <%= goal.date.year %></h2> 
+	<h2><%= goal.competition %></h2> 
 	<% end %>
 
 </div>
