--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -274,5 +274,29 @@ body {
 
 }
 
+/*Buttons*/
+
+.btn-success {
+  color: #FFF;
+  background-color: #42CA8A;
+  border-color: #4CAE4C;
+}
+
+/*Add Margins for non goal pages*/
+
+.textMargin {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1200px;
 
 
+}
+
+/*WHATS PERSONAL SPACE?!?@?#*/
+
+
+.topMarg {
+  margin-top: 15px;
+
+
+}
