--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,13 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="center">
+
+  <div class="jumbotron">
+    <h2>Edit <%= resource_name.to_s.humanize %></h2>
+  </div>
+
+<div class="textMargin">
+
+<h3>User Info</h3>
+
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
@@ -19,11 +28,16 @@
   <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
     <%= f.password_field :current_password, autocomplete: "off" %></div>
 
-  <div><%= f.submit "Update" %></div>
+  <div><%= f.submit "Update", :class => 'btn btn-success topMarg' %></div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<h3>Unhappy with us?</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p> <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, :class => 'btn btn-danger topMarg' %></p>
 
-<%= link_to "Back", :back %>
+<%= link_to "Back", :back, :class => 'btn btn-info topMarg' %>
+
+</div>
+
+
+</div>
