--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -85,6 +85,15 @@
   margin-right: 0px;
 }
 
+.nav-center {
+    margin:0;
+    float:none;
+}
+
+.navbar-inner{
+    text-align:center;
+}
+
 /*Home*/
 .jumbotron h1, .jumbotron .h1 {
 font-size: 2em;
