--- a/app/views/elements/_navbar.html.erb
+++ b/app/views/elements/_navbar.html.erb
@@ -1,22 +1,24 @@
 <nav class="navbar navbar-default" role="navigation">
-  <!-- Brand and toggle get grouped for better mobile display -->
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <%= link_to(image_tag("logoNBG.png", :class => "navbar-brand", :alt => "Goalopedia"), root_path) %>
-  </div>
 
-  <!-- Collect the nav links, forms, and other content for toggling -->
-<%= form_tag goals_path, method: :get, class: "navbar-form navbar-right" do %>
-  <p>
-    <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Search Players and Teams" %>
-    <%= submit_tag "Search", name: nil, class: "btn btn-default" %>
-  </p>
-<% end %>
+    <!-- <ul class="nav nav-pills navbar-left">
+    <li><%= link_to "Add Goals", new_goal_path, :class => 'btn btn-info' %></li>
+    </ul> -->
+
+ 
+    <div class="nav-center">
+      <%= link_to(image_tag("logoNBG.png", :class => "navbar-brand nav", :alt => "Goalopedia"), root_path) %>
+    </div>
+
+
+
+
+    <%= form_tag goals_path, method: :get, class: "navbar-form navbar-right" do %>
+      <p>
+        <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Search Players and Teams" %>
+        <%= submit_tag "Search", name: nil, class: "btn btn-default" %>
+      </p>
+    <% end %>
+
 
 
 
