--- a/app/views/statics/about.html.erb
+++ b/app/views/statics/about.html.erb
@@ -1,3 +1,7 @@
+<div class="textMargin">
+
 <% provide(:title, 'About') %>
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<h1>Welcome to Goalopedia!</h1>
+<p>Our mission is to document every goal caught on tape! Help us make Goalopedia the best resource for goals possible!</p>
+
+</div>
