--- a/app/views/statics/contact.html.erb
+++ b/app/views/statics/contact.html.erb
@@ -1,3 +1,6 @@
-<% provide(:title, 'Contact') %>
-<h1>StaticPages#contact</h1>
-<p>Find me in app/views/static_pages/contact.html.erb</p>
+<div class="textMargin">
+
+<h1>Contact Form</h1>
+<p>Coming Soon</p>
+
+</div>
