--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -23,11 +23,16 @@
 <div class="form-group">
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
               edit_goal_path(@goal), :class => 'btn btn-info' %>
-  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+<% if user_signed_in? && current_user.admin?  %>
+    <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
               goal_path(@goal),
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
+  <% end %>
+
+
+  
 </div>
 
 </div>
