--- a/app/views/statics/dmca.html.erb
+++ b/app/views/statics/dmca.html.erb
@@ -1,3 +1,6 @@
-<% provide(:title, 'DMCA') %>
-<h1>DMCA Compliance</h1>
-<p>All content found on Goalopedia is not hosted on our servers nor is created or uploaded by us. We are simply a compiling engine that finds content from websites like YouTube, DailyMotion, Metacafe and other website. Goalopedia is not responsible for the content of these external websites. If you find that some of the content violates your rights, please request for that content to be brought down at the host that is responsible for the content. That will ensure that the content is removed from our site and other search engines that may have indexed the content.</p>
+
+<div class="textMargin">
+
+	<h1>DMCA Compliance</h1>
+	<p>All content found on Goalopedia is not hosted on our servers nor is created or uploaded by us. We are simply a compiling engine that finds content from websites like YouTube, DailyMotion, Metacafe and other website. Goalopedia is not responsible for the content of these external websites. If you find that some of the content violates your rights, please request for that content to be brought down at the host that is responsible for the content. That will ensure that the content is removed from our site and other search engines that may have indexed the content.</p>
+</div>
