--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -283,6 +283,14 @@ body {
 
 }
 
+.list-group {
+  margin-bottom: 20px;
+  padding-left: 0;
+  width: 450px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /*Buttons*/
 
 .btn-success {
