--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,9 +22,9 @@
   </div>
   
   <div class="form-group">
-    <%= f.label :national_team, class: "control-label col-md-4" %>
+    <%= f.label :team_id, class: "control-label col-md-4" %>
     <div class="col-md-8">
-      <%= f.collection_select :national_team, Country.order(:name), :id, :name, include_blank: true %>
+      <%= f.collection_select :team_id, Team.order(:name), :id, :name, include_blank: true %>
     </div>
   </div>
     
