--- a/app/views/goals/_goal.html.erb
+++ b/app/views/goals/_goal.html.erb
@@ -3,7 +3,7 @@
 	
 	<h2>
 		<%= link_to goal do %>
-			<%= goal.player %> (<%= goal.team %>) v. <%= goal.opponent %>
+			<%= goal.player %> (<%= goal.team.name %>) v. <%= goal.opponent.name %>
 		<% end %>
 	</h2>
 	<div class="gfySize">
@@ -12,11 +12,5 @@
 	
 
 
-	<% if goal.competition = "World Cup" %>
-	<h2><%= goal.competition %> - <%= goal.stage %></h2>
-
-	<% else %>
-	<h2><%= goal.competition %></h2> 
-	<% end %>
 
 </div>
