try to fix heroku upload

--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -26,7 +26,7 @@
   <% if @goal.stage != nil %><li class="list-group-item"><strong>Stage:</strong> <%= @goal.stage %></li><% end %>
   <% if @goal.assist != nil %><li class="list-group-item"><strong>Assist:</strong> <%= @goal.assist %></li><% end %>
   <% if @goal.minute != nil %><li class="list-group-item"><strong>Minute:</strong> '<%= @goal.minute %></li><% end %>
-  <% if @goal.date != nil %><li class="list-group-item"><strong>Date:</strong> <%= @goal.date.civil %></li><% end %>
+  <% if @goal.date != nil %><li class="list-group-item"><strong>Date:</strong> <%= @goal.date %></li><% end %>
   <% if @goal.stadium != nil %><li class="list-group-item"><strong>Stadium:</strong> <%= @goal.stadium %></li><% end %>
 </ul>
 
