--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -286,9 +286,27 @@ body {
 .list-group {
   margin-bottom: 20px;
   padding-left: 0;
-  width: 450px;
+  max-width: 450px;
   margin-left: auto;
   margin-right: auto;
+}
+
+/*form*/
+
+.checkform {
+margin-bottom: 68px;
+}
+
+.checksquare {
+  float: left;
+  margin-left: 130px;
+  text-align: center;
+
+}
+
+.checkbox {
+
+
 }
 
 /*Buttons*/
