--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -19,8 +19,8 @@
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div><%= f.label :national_team %><br />
-  <%= f.collection_select :national_team, Country.order(:name), :id, :name, selected: @user.national_team %>
+  <div><%= f.label :team_id %><br />
+  <%= f.collection_select :team_id, Team.order(:name), :id, :name, selected: @user.team_id %>
 
 
   <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
