--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -22,12 +22,15 @@
 
 <ul class="list-group">
   
-  <li class="list-group-item active"><%= @goal.competition.name %></li>
+  <li class="list-group-item active"><% if @goal.date != nil %> <%= @goal.date.year %><% end %> <%= @goal.competition.name %></li>
+
+  
   <% if @goal.stage != nil %><li class="list-group-item"><strong>Stage:</strong> <%= @goal.stage %></li><% end %>
   <% if @goal.assist != nil %><li class="list-group-item"><strong>Assist:</strong> <%= @goal.assist %></li><% end %>
   <% if @goal.minute != nil %><li class="list-group-item"><strong>Minute:</strong> '<%= @goal.minute %></li><% end %>
-  <% if @goal.date != nil %><li class="list-group-item"><strong>Date:</strong> <%= @goal.date %></li><% end %>
+  <% if @goal.date != nil %><li class="list-group-item"><strong>Date:</strong> <%= @goal.date.to_s(:long) %></li><% end %>
   <% if @goal.stadium != nil %><li class="list-group-item"><strong>Stadium:</strong> <%= @goal.stadium %></li><% end %>
+  <% if @goal.scored_with != nil %><li class="list-group-item"><strong>Scored With:</strong> <%= @goal.scored_with %></li><% end %>
 </ul>
 
 
