--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -12,31 +12,39 @@
   <div class="vidOut">
   	<div class="gfyitem" data-title=false data-autoplay=false data-controls=false data-expand=false data-id="<%= @gfyid %>" %>"></div> 
   </div>
-</div>
 
-<% else %>
-
-<h3>Please add my video!</h3>
-
-<% end %>
-
-<ul class="list-group">
+  <ul class="list-group">
   
-  <li class="list-group-item active"><% if @goal.date != nil %> <%= @goal.date.year %><% end %> <%= @goal.competition.name %></li>
+  <li class="list-group-item active"><strong><% if @goal.date != nil %> <%= @goal.date.year %><% end %> <%= @goal.competition.name %></strong></li>
 
   
   <% if @goal.stage != nil %><li class="list-group-item"><strong>Stage:</strong> <%= @goal.stage %></li><% end %>
-  <% if @goal.assist != nil %><li class="list-group-item"><strong>Assist:</strong> <%= @goal.assist %></li><% end %>
+  <% if @goal.assist != nil || @goal.assist.blank? != true %><li class="list-group-item"><strong>Assist:</strong> <%= @goal.assist %></li><% end %>
   <% if @goal.minute != nil %><li class="list-group-item"><strong>Minute:</strong> '<%= @goal.minute %></li><% end %>
   <% if @goal.date != nil %><li class="list-group-item"><strong>Date:</strong> <%= @goal.date.to_s(:long) %></li><% end %>
   <% if @goal.stadium != nil %><li class="list-group-item"><strong>Stadium:</strong> <%= @goal.stadium %></li><% end %>
-  <% if @goal.scored_with != nil %><li class="list-group-item"><strong>Scored With:</strong> <%= @goal.scored_with %></li><% end %>
+  <% if @goal.scored_with %><li class="list-group-item"><strong>Scored With:</strong> <%= @goal.scored_with %></li><% end %>
 </ul>
 
 
+</div>
 
 
-<div class="form-group">
+
+
+
+<% else %>
+
+<h3>Please add my Gfycat Link!</h3>
+
+<% end %>
+
+
+
+
+
+
+<div class="form-group showRow">
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
               edit_goal_path(@goal), :class => 'btn btn-info' %>
 <% if user_signed_in? && current_user.admin?  %>
