--- a/app/views/goals/_goal.html.erb
+++ b/app/views/goals/_goal.html.erb
@@ -10,7 +10,6 @@
 				<div class="gfyitem" data-title=false data-autoplay=false data-controls=false data-expand=false data-id="<%= gfyid %>"></div>
 	</div>
 	
-
-
+<div class="rateStars"><h4 class="avRating">Average Rating:</h4> <%= rating_for goal, "quality", :noRatedMsg => true, :enable_half => true, :half_show => true, :disable_after_rate => false %></div>
 
 </div>
