--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -24,6 +24,7 @@
   <% if @goal.date != nil %><li class="list-group-item"><strong>Date:</strong> <%= @goal.date.to_s(:long) %></li><% end %>
   <% if @goal.stadium != nil %><li class="list-group-item"><strong>Stadium:</strong> <%= @goal.stadium %></li><% end %>
   <% if @goal.scored_with %><li class="list-group-item"><strong>Scored With:</strong> <%= @goal.scored_with %></li><% end %>
+  <li class="list-group-item active ratingExtra"><strong class="avRating">Rating:</strong> <%= rating_for @goal, "quality", :noRatedMsg => true, :enable_half => true, :half_show => true, :disable_after_rate => false %></li>
 </ul>
 
 
@@ -39,9 +40,6 @@
 
 <% end %>
 
-
-
-Quality : <%= rating_for @goal, "quality" %>
 
 
 <div class="form-group showRow">
