--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -60,25 +60,79 @@
 
 .navbar-form .form-control {
   display: inline-block;
-  width: 200px;
-  vertical-align: middle;
+  width: 240px;
 }
 
-.navbar-brand {
-  float: left;
+.navBuffer {
+  margin-top: 5px;
+  margin-right: 415px;
+}
+
+
+.navBrand {
   padding: 5px;
   height: 70px;
-  margin-left: 3%;
+  left: 50%;
+  margin-left: -135px;
+  margin-top: 10px;
+  position: absolute;
+  top: -17px;
+}
+
+.navbar-collapse:before, .navbar-collapse:after {
+content: " ";
+display: inline;
+}
+
+.navbar-header:before, .navbar-header:after {
+content: " ";
+display: inline;
+}
+
+.navbar-toggle {
+  position: relative;
+  float: left;
+  margin-left: 15px;
+  padding: 9px 10px;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  background-color: rgba(0, 0, 0, 0);
+  background-image: none;
+  border: 1px solid rgba(0, 0, 0, 0);
+  border-radius: 4px;
+  margin-bottom: 30px;
+  margin-right: 300px;
+}
+
+.logoCenter {
+  width: 300px;
+  display: inline;
+}
+
+.searchNav {
+  display: inline;
+
 }
 
 .navbar {
   border-radius: 0px;
+  min-height: 60px;
 }
 
 .navbar-form {
-  padding-top: 8px;
+  overflow: auto;
+  border-top: none;
+  border-bottom: none;
+  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
+  width: 375px;
+  margin-top: 13px;
+  margin-bottom: 13px;
 
-
+}
+.navbar-form p {
+  float: right;
+  margin: 0px;
 }
 
 .navbar-form.navbar-right:last-child {
@@ -111,6 +165,12 @@ font-size: 2em;
   padding-bottom: 10px;
 }
 
+/*nav toggle*/
+
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
+background-color: #42CA8A;
+color: #555;
+}
 
 /* footer */
 
