--- a/app/views/elements/_navbar.html.erb
+++ b/app/views/elements/_navbar.html.erb
@@ -1,28 +1,58 @@
 <nav class="navbar navbar-default" role="navigation">
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    
+  </div>
 
-    <!-- <ul class="nav nav-pills navbar-left">
-    <li><%= link_to "Add Goals", new_goal_path, :class => 'btn btn-info' %></li>
-    </ul> -->
+  <!-- Collect the nav links, forms, and other content for toggling -->
+  <div class="collapse navbar-collapse" id="navbar-collapse-1">
+    <ul class="nav navbar-nav">
+    </ul>
+    <ul class="nav navbar-nav navbar-left navBuffer">
+      <% if defined?(Devise) %>
+        <% if user_signed_in? %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Edit Account", edit_user_registration_path %></li>
+              <li class="divider"></li>
+              <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to "Login", new_user_session_path %></li>
+          <li><%= link_to "Sign Up", new_user_registration_path %></li>
+        <% end %>
+      <% end %>
+    </ul>
+  </div><!-- /.navbar-collapse -->
 
- 
-    <div class="nav-center">
-      <%= link_to(image_tag("logoNBG.png", :class => "navbar-brand nav", :alt => "Goalopedia"), root_path) %>
-    </div>
+    <%= link_to(image_tag("logoNBG.png", :class => "navBrand", :alt => "Goalopedia"), root_path) %>
 
 
+  <%= form_tag goals_path, method: :get, class: "navbar-form navbar-right" do %>
+    <p>
+      <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Search Players and Teams" %>
+      <%= submit_tag "Search", name: nil, class: "btn btn-default" %>
+    </p>
+  <% end %>
 
 
-    <%= form_tag goals_path, method: :get, class: "navbar-form navbar-right" do %>
-      <p>
-        <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Search Players and Teams" %>
-        <%= submit_tag "Search", name: nil, class: "btn btn-default" %>
-      </p>
-    <% end %>
-
-
-
-
-  
 </nav>
+
+
+
+
+
+
+
+
+
 
 
