--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -24,7 +24,11 @@
   <% if @goal.date != nil %><li class="list-group-item"><strong>Date:</strong> <%= @goal.date.to_s(:long) %></li><% end %>
   <% if @goal.stadium != nil %><li class="list-group-item"><strong>Stadium:</strong> <%= @goal.stadium %></li><% end %>
   <% if @goal.scored_with %><li class="list-group-item"><strong>Scored With:</strong> <%= @goal.scored_with %></li><% end %>
-  <li class="list-group-item active ratingExtra"><strong class="avRating">Rating:</strong> <%= rating_for @goal, "quality", :noRatedMsg => true, :enable_half => true, :half_show => true, :disable_after_rate => false %></li>
+  <% if user_signed_in? != true %>
+  <li class="list-group-item active noRat"><strong class="avRating margTop">Rating:</strong> <%= rating_for @goal, "quality", :noRatedMsg => true, :enable_half => true, :half_show => true, :disable_after_rate => false %><%= link_to "Sign Up to Rate", new_user_registration_path, class: "btn btn-info btn-small" %></li>
+  <% else %>
+  <li class="list-group-item active ratingExtra"><strong class="avRating">Rating:</strong> <%= rating_for @goal, "quality", :noRatedMsg => true, :enable_half => true, :half_show => true, :disable_after_rate => false %><%= link_to "Sign Up to Rate", new_user_registration_path, class: "btn btn-info btn-small" %></li>
+  <% end %>
 </ul>
 
 
