--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -27,7 +27,7 @@
   <% if user_signed_in? != true %>
   <li class="list-group-item active noRat"><strong class="avRating margTop">Rating:</strong> <%= rating_for @goal, "quality", :noRatedMsg => true, :enable_half => true, :half_show => true, :disable_after_rate => false %><%= link_to "Sign Up to Rate", new_user_registration_path, class: "btn btn-info btn-small" %></li>
   <% else %>
-  <li class="list-group-item active ratingExtra"><strong class="avRating">Rating:</strong> <%= rating_for @goal, "quality", :noRatedMsg => true, :enable_half => true, :half_show => true, :disable_after_rate => false %><%= link_to "Sign Up to Rate", new_user_registration_path, class: "btn btn-info btn-small" %></li>
+  <li class="list-group-item active ratingExtra"><strong class="avRating">Rating:</strong> <%= rating_for @goal, "quality", :noRatedMsg => true, :enable_half => true, :half_show => true, :disable_after_rate => false %></li>
   <% end %>
 </ul>
 
